# ChangeLog for x11-libs/qt-core
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-core/ChangeLog,v 1.50 2009/05/26 16:19:30 tampakrap Exp $

  26 May 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  qt-core-4.5.1.ebuild, +files/qt-core-4.5-boilerplate.diff:
  Apply ia64 patch, thanks to armin76

  15 May 2009; Tobias Klausmann <klausman@gentoo.org> qt-core-4.5.1.ebuild:
  Stable on alpha, bug #266201

  14 May 2009; Ben de Groot <yngwin@gentoo.org> -qt-core-4.5.0.ebuild:
  Remove old

  13 May 2009; Brent Baude <ranger@gentoo.org> qt-core-4.5.1.ebuild:
  Marking qt-core-4.5.1 ppc stable for bug 266201

  01 May 2009; Markos Chandras <hwoarang@gentoo.org> qt-core-4.5.0,
  qt-core-4.5.1:
  Adding x11-libs/libXext as dependency. Thanks to Christian Ruppert
  <idl0r@gentoo.org> for reporting.

  30 Apr 2009; Markos Chandras <hwoarang@gentoo.org> qt-core-4.5.0,
  qt-core-4.5.1:
  Adding x11-libs/libX11 as dependency. Fixes bug #267967

  28 Apr 2009; Jeroen Roovers <jer@gentoo.org> qt-core-4.4.2-r2.ebuild:
  Stable for HPPA (bug #263945).

*qt-core-4.5.1 (27 Apr 2009)

  27 Apr 2009; Markos Chandras <hwoarang@gentoo.org> +qt-core-4.5.1.ebuild:
  Version bump to 4.5.1

  15 Apr 2009; Brent Baude <ranger@gentoo.org> qt-core-4.4.2-r2.ebuild:
  Marking qt-core-4.4.2-r2 ppc64 for bug 263945

  11 Apr 2009; nixnut <nixnut@gentoo.org> qt-core-4.4.2-r2.ebuild:
  ppc stable #263945

  09 Apr 2009; Raúl Porcel <armin76@gentoo.org> qt-core-4.4.2-r2.ebuild:
  ia64/sparc stable wrt #263945

  05 Apr 2009; Tobias Klausmann <klausman@gentoo.org>
  qt-core-4.4.2-r2.ebuild:
  Stable on alpha, bug #263945

  05 Apr 2009; Markus Meier <maekke@gentoo.org> qt-core-4.4.2-r2.ebuild:
  amd64/x86 stable, bug #263945

  18 Mar 2009; Markos Chandras <hwoarang@gentoo.org>
  -qt-core-4.5.0_rc1.ebuild:
  Dropping 4.5.0_rc1

  17 Mar 2009; Raúl Porcel <armin76@gentoo.org> qt-core-4.5.0.ebuild:
  Add ~arm wrt #262462
