@@ -12,6 +12,6 @@ DIST qt-x11-opensource-src-4.4.2.tar.bz2 102816706 RMD160 5719ab5800ca181417e0df
 DIST qt-x11-opensource-src-4.5.1.tar.bz2 114667436 RMD160 702d7c6bb9787cd5602dcb8afce52bdfcfd52179 SHA1 50ba9b6d2eb7056e47dc53775be509c4ff6ec015 SHA256 b994c40e41386c9d82f025dd9198e1161717021216680adef97da3f1b8947c75
 EBUILD qt-core-4.4.2-r2.ebuild 5484 RMD160 d59532665194123f593d73bb9f1251b977220a1e SHA1 e1b9ed77733afdbeb0ff03d1dc77a7396a96bf1f SHA256 75f68ba3c82c468b3c2fd916632252ee1afd7bbc2c0b6e696c927f8218d55a43
 EBUILD qt-core-4.4.2.ebuild 5215 RMD160 3ba4a96c9f83e6ff3040c4eda719a1e99ae676ac SHA1 ede22651066cef7e54c9a67d9a52b3c4ffa73ab6 SHA256 2c1f8076e1299025326c7916e7fc2f4d749efbe7ce2e50759262554a4ff6b823
-EBUILD qt-core-4.5.1.ebuild 6191 RMD160 9be5016782b6c7ff1c05e000251a8a0949da121c SHA1 66a8758811bec42eaa6608c5bba927bbab97b6d6 SHA256 5fe02ebfb50f3b5a1e5007c6519a7617edcb7b1eb3ac0d2cf051556a2786dc2b
-MISC ChangeLog 6866 RMD160 018b1ee3ccccaab59505f50f9c9ffa880a1abbec SHA1 d32bab4eb884758b5eda23dd836efb922466d4f8 SHA256 818601cac87fa518088631ebe1d927e3748a4aa7922365dfa0264c56a431096d
+EBUILD qt-core-4.5.1.ebuild 6186 RMD160 5b768ca706aa2943675f187caf0752fd97745c6b SHA1 94a1e2232ea788dc9cfaeffac7a6d6ec02a373ab SHA256 4a650f375d1f4e3bca84d3645621327c9126b32de17994c76fae94222197a5ec
+MISC ChangeLog 7067 RMD160 c029430f49464f6878ccf41e638399c0cc98fdb1 SHA1 6b60c193591756f62503737ed34ebabbe8505d3a SHA256 d61855463577c482c8d1ad9f7a96b972baa435ec36eaafb3d14e3f29d1be0774
 MISC metadata.xml 405 RMD160 7ad4cec9a392e8164062dae2935e2c59ba52b503 SHA1 104a2a88f1cf174e9e4827b639a73d79bd0fba2d SHA256 cce5d387ade0a1412bf70c58c7b0ab28fd488cc60e458ac66296ee632d893bf8
